infra/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aquai
  labels:
    name: aquai
    environment: prod
